k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  # type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
      # nodePort: 30002
