k8s/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: demo-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: backend.local
      http:
        paths:
        - path: /api/v1
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 3002
